fix Footer overlays .site-content on MobileView

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -6,7 +6,6 @@ html {
 
 body {
 	margin: 0;
-	padding-bottom: 6rem;
 	min-height: 100vh;
 	position: relative;
 }
